--- a/frontend/src/app/pages/search/work-mini/work-mini.component.html
+++ b/frontend/src/app/pages/search/work-mini/work-mini.component.html
@@ -1,47 +1,81 @@
 <div
-      class="bg-white-500 rounded-2xl p-5 grid grid-cols-12 gap-4 justify-center align-middle"
-    >
-      <img
-        src="assets/images/logos/asus_logo.svg"
-        alt="ide jon a kep"
-        class="float-left w-[7rem] col-span-1"
-      />
-      <div class="col-span-10 flex flex-col">
-        <div class="">
-          <h1
-          class="font-medium text-3xl text-dark_blue-500 flex items-center gap-2"
+  class="bg-white-500 rounded-2xl p-5 grid grid-cols-12 gap-4 justify-center align-middle"
+>
+  <img
+    src="assets/images/logos/asus_logo.svg"
+    alt="ide jon a kep"
+    class="float-left w-[7rem] col-span-1"
+  />
+  <div class="col-span-10 flex flex-col">
+    <div class="">
+      <h1
+        class="text-3xl text-dark_blue-500 flex items-center gap-2 font-semibold"
+      >
+        {{ work.cim }}
+        @for(key_words of work.kulcsszo_neve; track $index){
+        <span
+          class="font-medium outline-2 outline-dark_blue-500 p-1.5 pt-0.5 pb-0.5 text-xs rounded-2xl"
+          >{{ key_words }}</span
         >
-          {{ work.cim }}
-          @for(key_words of work.kulcsszo_neve; track $index){
-            <span
-            class="font-medium outline-2 outline-dark_blue-500 p-1.5 pt-0.5 pb-0.5 text-xs rounded-2xl"
-            >{{ key_words }}</span>
-          }
-        </h1>
-          <h2 class="text-dark_blue-500 font-medium text-2xl">
-            {{work.ceg_adoazonosito | lutCompanyName | async}}
-            <!--TODO Pipeot írni ehez a szépséghez-->
-          </h2>
-          <h2 class="text-dark_blue-500 font-medium text-2xl">
-            {{ work.terulet_id | lutLocations | async}}
-          </h2>
-          <h3 class="text-dark_red-500 font-medium">
-            {{ "Br. " + work.ber + " Ft" }}
-          </h3>
-        </div>
-      </div>
-      <div class="text-dark_blue-500 justify-self-end hover:text-dark_red-500 h-fit">
-        <mat-icon class="hover:cursor-pointer">reviews</mat-icon>
-      </div>
-      <p class="text-dark_blue-500 font-medium text-justify col-span-8">
-        {{ work.leiras }}
-      </p>
-      <div class="col-span-4 flex justify-end align-middle ">
-        <button
-          (click)="navigate(work)"
-          class="bg-dark_red-500 text-white-500 font-medium text-xl rounded-xl cursor-pointer p-5 pl-20 pr-20 "
-        >
-          Érdekel
-        </button>
-      </div>
+        }
+      </h1>
+      <h1 class="text-dark_blue-500  text-2xl font-semibold">
+        {{ work.ceg_adoazonosito | lutCompanyName | async }}
+      </h1>
+      <h2 class="text-dark_blue-500 font-medium text-2xl">
+        Rating: {{ (ceg_ertekeles ) ? ceg_ertekeles : 'Nincs'}}
+      </h2>
+      <h2 class="text-dark_blue-500 font-medium text-2xl">
+        {{ work.terulet_id | lutLocations | async }}
+      </h2>
+      <h3 class="text-dark_red-500 font-medium">
+        {{ "Br. " + work.ber + " Ft" }}
+      </h3>
     </div>
+  </div>
+  <div class="text-dark_blue-500 justify-self-end h-fit group" [appDisplay]="this.login_service.getRole() == 'allaskereso' && this.login_service.isLoggedIn() && !this.is_ertekelt_by_user">
+    <!-- TODO Ha már értékelte a céget ne jelenjen meg. -->
+    <div
+      class="h-[6lh] translate-x-0 -translate-y-36 bg-white-500 absolute outline hover:text-dark_blue-500 hidden group-hover:block p-2"
+    >
+      <section class="flex flex-col gap-2 items-center">
+        <p>Dolgoztál már ennél a cégnél? Értékeld!</p>
+        <div class="flex space-x-1 text-amber-400">
+          @for(star of stars.entries(); track $index){
+          <mat-icon
+            (click)="setRating($index + 1)"
+            (mouseover)="hoverRating = $index + 1"
+            (mouseleave)="hoverRating = 0"
+            class="cursor-pointer transition-colors duration-200"
+            [ngClass]="{
+              'text-yellow-400': (hoverRating || rating) > $index,
+              'text-gray-300': (hoverRating || rating) <= $index
+            }"
+          >
+            {{ (hoverRating || rating) > $index ? "star" : "star_border" }}
+          </mat-icon>
+          }
+        </div>
+        <p class="mt-2 text-sm text-gray-600">Rating: {{ rating }} out of 5</p>
+        <button
+          class="bg-dark_red-500 w-fit p-0.5 text-white-500 pr-1 pl-1 rounded-lg"
+          (click)="submit()"
+        >
+          Küldd
+        </button>
+      </section>
+    </div>
+    <mat-icon class="outline-0">reviews</mat-icon>
+  </div>
+  <p class="text-dark_blue-500 font-medium text-justify col-span-8">
+    {{ work.leiras }}
+  </p>
+  <div class="col-span-4 flex justify-end align-middle">
+    <button
+      (click)="navigate(work)"
+      class="bg-dark_red-500 text-white-500 font-medium text-xl rounded-xl cursor-pointer p-5 pl-20 pr-20"
+    >
+      Érdekel
+    </button>
+  </div>
+</div>
