--- a/frontend/src/app/pages/register/ceg-form/ceg-form.component.html
+++ b/frontend/src/app/pages/register/ceg-form/ceg-form.component.html
@@ -88,3 +88,12 @@
   </button>
 </div>
 </form>
+
+  <app-error-msg
+  [error_msg]="error_msg"
+  [appDisplay]="showError"
+  ></app-error-msg>
+  <app-success-msg
+    [success_msg]="success_msg"
+    [appDisplay]="showSuccess"
+  ></app-success-msg>
