--- a/frontend/src/app/pages/admin/main-page/statistics/statistics.component.html
+++ b/frontend/src/app/pages/admin/main-page/statistics/statistics.component.html
@@ -1,11 +1,13 @@
-<div class="bg-white-500 rounded-2xl p-4 grid grid-cols-2 gap-8 col-span-2 h-full justify-center items-center">
+<div
+  class="bg-white-500 rounded-2xl p-4 grid grid-cols-2 gap-8 col-span-2 h-full justify-center items-center"
+>
+  <h1 class="font-medium text-2xl col-span-2 text-center text-dark_blue-500">Statisztikák</h1>
 
-<app-top-comp></app-top-comp>
+  <app-top-comp></app-top-comp>
 
-<app-megye-count-jobs></app-megye-count-jobs>
+  <app-megye-count-jobs></app-megye-count-jobs>
 
-<app-megye-avg-fizu></app-megye-avg-fizu>
+  <app-megye-avg-fizu></app-megye-avg-fizu>
 
-<app-popular-categories></app-popular-categories>
-
+  <app-popular-categories></app-popular-categories>
 </div>
