--- a/frontend/src/app/pages/admin/main-page/add-admin-form/add-admin-form.component.html
+++ b/frontend/src/app/pages/admin/main-page/add-admin-form/add-admin-form.component.html
@@ -12,6 +12,7 @@
         class="h-[1lh] outline-none pl-8 text-medium focus:outline-0 peer text-dark_blue-500 w-full"
         minlength="2"
         formControlName="name"
+        required
       />
       <mat-icon
         class="absolute left-1 top-[0.625lh] transform -translate-y-1/2"
